syntax = "proto3";

package cart;

service CartService {
  rpc addProductToCart(ProductToAdd) returns (CartResponse);
  rpc deleteProductFromCart(ProductToDelete) returns (CartResponse);
}

message ProductToAdd {
  string id = 1;
  int32 quantity = 2;
}

message ProductToDelete {
  string id = 1;
}

message CartResponse {
  string message = 1;
}
